added home screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="textGrey">#b5abab</color>
+    <color name="primary">#370f24</color>
+    <color name="tabUnselected">#87797F</color>
 </resources>
