--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="tabUnselected">#87797F</color>
     <color name="placeNameText">#1D1D26</color>
     <color name="homeBackground">#e5e5e5</color>
+    <color name="ratingStar"> #ffc922</color>
 </resources>
