--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,4 +21,9 @@
         <item name="fontFamily">@font/avenir_medium</item>
         <item name="android:textAllCaps">false</item>
     </style>
+
+    <style name="RatingBar" parent="Theme.AppCompat">
+        <item name="colorControlNormal">@color/textGrey</item>
+        <item name="colorControlActivated">@color/ratingStar</item>
+    </style>
 </resources>
