--- a/app/src/main/res/layout/activity_place_details.xml
+++ b/app/src/main/res/layout/activity_place_details.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+
         <ImageView
             android:id="@+id/placeImg"
             android:layout_width="match_parent"
@@ -20,54 +21,30 @@
             android:scaleType="centerCrop"
             android:src="@drawable/splashscreen"/>
 
-        <ImageView
-            android:id="@+id/backButton"
-            android:layout_width="wrap_content"
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appBar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#00000000"
+            android:paddingTop="20dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="30dp"
-            android:layout_marginStart="20dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/back_icon"/>
+            app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textSize="28sp"
-            android:layout_marginTop="25dp"
-            app:layout_constraintStart_toEndOf="@id/backButton"
-            app:layout_constraintEnd_toStartOf="@id/shareIcon"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="Attil"/>
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/topAppBar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:menu="@menu/place_details_bar"
+                android:backgroundTint="#00000000"
+                app:title="Attil"
+                android:elevation="0dp"
+                app:titleCentered="true"
+                android:layout_marginHorizontal="5dp"
+                app:navigationIcon="@drawable/back_icon"
+                style="@style/Widget.MaterialComponents.Toolbar.Primary"
+                />
 
-
-
-        <ImageView
-            android:id="@+id/shareIcon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/addFav"
-            android:layout_marginTop="30dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="20dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/share_icon"/>
-
-        <ImageView
-            android:id="@+id/addFav"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="30dp"
-            android:layout_marginStart="10dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/favourite_icon_new"/>
-
+        </com.google.android.material.appbar.AppBarLayout>
 
 
         <TextView
