--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@android:color/transparent</item>-->
         <!-- Customize your theme here. -->
+        <item name="android:windowTranslucentNavigation">true</item>
     </style>
 
     <style name="circleImage">
