--- a/app/src/main/res/layout/activity_place_details.xml
+++ b/app/src/main/res/layout/activity_place_details.xml
@@ -27,6 +27,8 @@
             android:layout_height="wrap_content"
             android:background="#00000000"
             android:paddingTop="20dp"
+            android:animateLayoutChanges="true"
+            android:stateListAnimator="@null"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -104,6 +106,7 @@
                 android:text="Photos"/>
 
             <TextView
+                android:id="@+id/reviews"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
