--- a/app/src/main/res/layout/activity_add_review.xml
+++ b/app/src/main/res/layout/activity_add_review.xml
@@ -83,6 +83,7 @@
         android:layout_marginTop="10dp"/>
 
     <TextView
+        android:id="@+id/submit_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="2dp"
@@ -98,6 +99,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pickImage"
         app:layout_constraintVertical_bias="1.0" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
