--- a/app/src/main/res/layout/place_item_adapter.xml
+++ b/app/src/main/res/layout/place_item_adapter.xml
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:text="Central Cinemas"
             android:textColor="@color/black"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/avenir_medium"
@@ -49,6 +49,18 @@
             android:layout_marginEnd="10dp"
             android:layout_marginTop="10dp"
             android:contentDescription="@string/unFavourite"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="4.5"
+            android:background="@drawable/bg_rating"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toEndOf="@id/imgGuideline"
+            app:layout_constraintBottom_toTopOf="@id/distanceAndValue"
+            android:padding="3dp"/>
 
         <TextView
             android:id="@+id/distanceAndValue"
