--- a/app/src/main/res/menu/filter_bar.xml
+++ b/app/src/main/res/menu/filter_bar.xml
@@ -1,20 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
     <item
-        android:id="@+id/homeFilter"
+        android:id="@+id/filter"
         android:icon="@drawable/filter_icon"
         android:title="@string/filter"
         android:contentDescription="@string/filter"
         app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/search"
-        android:icon="@drawable/search_icon"
-        android:title="@string/search"
-        android:contentDescription="@string/search"
-        app:showAsAction="ifRoom" />
-
-
 </menu>
