--- a/app/src/main/res/layout/fragment_near_you.xml
+++ b/app/src/main/res/layout/fragment_near_you.xml
@@ -8,21 +8,22 @@
     <fragment
         android:id="@+id/mapFragment"
         android:layout_width="0dp"
-        android:layout_height="250dp"
+        android:layout_height="200dp"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <include
-        android:id="@+id/place"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/nearRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="140dp"
-        android:layout_margin="10dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mapFragment"
-        layout="@layout/place_item_adapter"/>
+        android:layout_marginTop="10dp" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
