--- a/app/src/main/res/layout/place_item_adapter.xml
+++ b/app/src/main/res/layout/place_item_adapter.xml
@@ -2,7 +2,8 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="120dp"
+    android:layout_marginVertical="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -14,7 +15,14 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.35"/>
+            app:layout_constraintGuide_percent="0.30"/>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/imgGuideline2"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.90"/>
 
         <ImageView
             android:id="@+id/imageView"
@@ -33,10 +41,11 @@
             android:layout_height="wrap_content"
             android:text="Central Cinemas"
             android:textColor="@color/black"
-            android:textSize="20sp"
+            android:textSize="14sp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/avenir_medium"
+            app:layout_constraintEnd_toEndOf="@id/imgGuideline2"
             app:layout_constraintStart_toEndOf="@id/imgGuideline"
             app:layout_constraintTop_toTopOf="parent"/>
 
@@ -46,11 +55,12 @@
             android:src="@drawable/favourite_icon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginEnd="10dp"
             android:layout_marginTop="10dp"
+            app:layout_constraintStart_toEndOf="@id/imgGuideline2"
             android:contentDescription="@string/unFavourite"/>
 
         <TextView
+            android:id="@+id/ratings"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="4.5"
@@ -58,6 +68,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:textColor="@color/white"
+            app:layout_constraintTop_toBottomOf="@id/placeName"
             app:layout_constraintStart_toEndOf="@id/imgGuideline"
             app:layout_constraintBottom_toTopOf="@id/distanceAndValue"
             android:padding="3dp"/>
@@ -67,10 +78,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Movie Theatre 4.5km"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/avenir_medium"
+            app:layout_constraintEnd_toEndOf="@id/imgGuideline2"
+            app:layout_constraintTop_toBottomOf="@id/ratings"
             app:layout_constraintStart_toEndOf="@id/imgGuideline"
             app:layout_constraintBottom_toTopOf="@id/placeAddress"/>
 
@@ -79,10 +92,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Tiger circle, Manipala"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:layout_marginStart="10dp"
             android:fontFamily="@font/avenir_medium"
             android:layout_marginBottom="10dp"
+            app:layout_constraintTop_toBottomOf="@id/distanceAndValue"
+            app:layout_constraintEnd_toEndOf="@id/imgGuideline2"
             app:layout_constraintStart_toEndOf="@id/imgGuideline"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
