added place details,backend

--- a/app/src/main/res/layout/activity_place_details.xml
+++ b/app/src/main/res/layout/activity_place_details.xml
@@ -50,6 +50,7 @@
 
 
         <TextView
+            android:id="@+id/placeType"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
@@ -97,6 +98,7 @@
                 android:text="Rating"/>
 
             <TextView
+                android:id="@+id/photos"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
