--- a/app/src/main/res/layout/fragment_near_you.xml
+++ b/app/src/main/res/layout/fragment_near_you.xml
@@ -17,11 +17,13 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/nearRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginHorizontal="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mapFragment"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="20dp"
         android:layout_marginTop="10dp" />
 
 
