--- a/app/src/main/res/layout/place_item_adapter.xml
+++ b/app/src/main/res/layout/place_item_adapter.xml
@@ -7,6 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -42,6 +43,8 @@
             android:text="Central Cinemas"
             android:textColor="@color/black"
             android:textSize="14sp"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/avenir_medium"
@@ -50,14 +53,30 @@
             app:layout_constraintTop_toTopOf="parent"/>
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/favourite_icon"
+            android:id="@+id/fav"
+            android:layout_width="30dp"
+            android:layout_height="0dp"
+            android:src="@drawable/fav_unselected"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintDimensionRatio="1"
             android:layout_marginTop="10dp"
+
             app:layout_constraintStart_toEndOf="@id/imgGuideline2"
-            android:contentDescription="@string/unFavourite"/>
+            android:contentDescription="@string/unFavourite" />
+
+        <ImageView
+            android:id="@+id/unfav"
+            android:layout_width="30dp"
+            android:layout_height="0dp"
+            android:src="@drawable/fav_selected"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintDimensionRatio="1"
+            android:layout_marginTop="10dp"
+            android:visibility="gone"
+            app:layout_constraintStart_toEndOf="@id/imgGuideline2"
+            android:contentDescription="@string/unFavourite" />
 
         <TextView
             android:id="@+id/ratings"
@@ -79,6 +98,8 @@
             android:layout_height="wrap_content"
             android:text="Movie Theatre 4.5km"
             android:textSize="14sp"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/avenir_medium"
@@ -91,6 +112,8 @@
             android:id="@+id/placeAddress"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:text="Tiger circle, Manipala"
             android:textSize="14sp"
             android:layout_marginStart="10dp"
