--- a/app/src/main/res/layout/fragment_confirm_password.xml
+++ b/app/src/main/res/layout/fragment_confirm_password.xml
@@ -1,19 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/cpTv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="confirm password"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
+    <LinearLayout
+        android:id="@+id/linear_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/Password3"
+            android:text="@string/enter_password"
+            android:textSize="20sp"
+            android:textColor="#b5abab"
+            android:fontFamily="@font/avenir_book"
+            android:gravity="center"
+            android:layout_marginTop="80dp" />
+
+        <EditText
+            android:id="@+id/password_entry3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="24sp"
+            android:text="@string/_123456"
+            android:textColor="#FFFFFF"
+            android:fontFamily="@font/avenir_book"
+            tools:ignore="HardcodedText,MissingConstraints"
+            android:ems="10"
+            app:backgroundTint="@color/textGrey"
+            android:inputType="textPassword" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/confirm_Password2"
+            android:text="@string/confirm_password"
+            android:textSize="20sp"
+            android:textColor="#b5abab"
+            android:fontFamily="@font/avenir_book"
+            android:gravity="center"
+            android:layout_marginTop="10dp" />
+
+        <EditText
+            android:id="@+id/confirm_password_entry2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="24sp"
+            android:text="@string/_123456"
+            android:textColor="#FFFFFF"
+            android:fontFamily="@font/avenir_book"
+            tools:ignore="HardcodedText,MissingConstraints"
+            android:ems="10"
+            app:backgroundTint="@color/textGrey"
+            android:inputType="textPassword" />
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/submit"
+            android:text="@string/submit"
+            android:textSize="24sp"
+            android:textColor="@color/white"
+            android:fontFamily="@font/avenir_book"
+            android:gravity="center"
+            android:textAllCaps="false"
+            android:layout_marginTop="80dp"
+            tools:ignore="MissingConstraints"
+            app:cornerRadius="20dp"
+            android:background="@drawable/button_border"/>
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
