--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -1,16 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="signup screen"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/linear_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/Email2"
+            android:text="Email"
+            android:textSize="20sp"
+            android:textColor="#b5abab"
+            android:fontFamily="@font/avenir_book"
+            android:gravity="center"
+            android:layout_marginTop="80dp" />
+
+       <EditText
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:id="@+id/Email_address"
+           android:text="saish@gmail.com"
+           android:textColor="@color/white"
+           android:gravity="center"
+           android:inputType="textEmailAddress"
+           android:textSize="24sp"
+           android:ems="10"
+           app:backgroundTint="@color/textGrey"
+           android:fontFamily="@font/avenir_book" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/mobile_number"
+            android:text="Mobile Number"
+            android:textSize="20sp"
+            android:textColor="#b5abab"
+            android:fontFamily="@font/avenir_book"
+            android:gravity="center"
+            android:layout_marginTop="10dp" />
+
+        <EditText
+            android:id="@+id/mobile_num"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="24sp"
+            android:text="9844635685"
+            android:textColor="#FFFFFF"
+            android:fontFamily="@font/avenir_book"
+            tools:ignore="HardcodedText,MissingConstraints"
+            android:ems="10"
+            app:backgroundTint="@color/textGrey"
+            android:inputType="phone" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/Password2"
+            android:text="@string/password"
+            android:textSize="20sp"
+            android:textColor="#b5abab"
+            android:fontFamily="@font/avenir_book"
+            android:gravity="center"
+            android:layout_marginTop="10dp" />
+
+        <EditText
+            android:id="@+id/password_entry2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="24sp"
+            android:text="@string/_123456"
+            android:textColor="#FFFFFF"
+            android:fontFamily="@font/avenir_book"
+            tools:ignore="HardcodedText,MissingConstraints"
+            android:ems="10"
+            app:backgroundTint="@color/textGrey"
+            android:inputType="textPassword" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/confirm_Password"
+            android:text="Confirm Password"
+            android:textSize="20sp"
+            android:textColor="#b5abab"
+            android:fontFamily="@font/avenir_book"
+            android:gravity="center"
+            android:layout_marginTop="10dp" />
+
+        <EditText
+            android:id="@+id/confirm_password_entry"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="24sp"
+            android:text="@string/_123456"
+            android:textColor="#FFFFFF"
+            android:fontFamily="@font/avenir_book"
+            tools:ignore="HardcodedText,MissingConstraints"
+            android:ems="10"
+            app:backgroundTint="@color/textGrey"
+            android:inputType="textPassword" />
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/login2"
+            android:text="@string/login"
+            android:textSize="24sp"
+            android:textColor="@color/white"
+            android:fontFamily="@font/avenir_book"
+            android:gravity="center"
+            android:textAllCaps="false"
+            android:layout_marginTop="80dp"
+            tools:ignore="MissingConstraints"
+            app:cornerRadius="20dp"
+            android:background="@drawable/button_border"/>
+
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
