--- a/app/src/main/res/layout/fragment_otp.xml
+++ b/app/src/main/res/layout/fragment_otp.xml
@@ -3,93 +3,94 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <LinearLayout
         android:id="@+id/linear_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="80dp"
         android:orientation="vertical"
-        tools:ignore="MissingConstraints">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/otp_notification"
-            android:text="@string/we_have_sent_you_an_otp"
-            android:textSize="28sp"
-            android:textColor="#b5abab"
-            android:fontFamily="@font/avenir_book"
-            android:gravity="center"
-            android:layout_marginTop="80dp"
-            tools:ignore="HardcodedText" />
-        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/otp_notification2"
-            android:text="@string/please_enter_it_below"
-            android:textSize="28sp"
-            android:textColor="#b5abab"
             android:fontFamily="@font/avenir_book"
             android:gravity="center"
-            android:layout_marginTop="1dp" />
+            android:text="@string/we_have_sent_you_an_otp"
+            android:textColor="@color/white"
+            android:textSize="22sp"
+            tools:ignore="HardcodedText" />
 
         <TextView
+            android:id="@+id/otp_notification2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/Enter_OTP"
-            android:text="@string/enter_otp"
-            android:textSize="20sp"
-            android:textColor="#b5abab"
+            android:layout_marginTop="1dp"
             android:fontFamily="@font/avenir_book"
             android:gravity="center"
-            android:layout_marginTop="80dp" />
+            android:text="@string/please_enter_it_below"
+            android:textColor="@color/white"
+            android:textSize="22sp" />
+
+        <TextView
+            android:id="@+id/Enter_OTP"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:fontFamily="@font/avenir_book"
+            android:gravity="center"
+            android:text="@string/enter_otp"
+            android:textColor="#b5abab"
+            android:textSize="18sp" />
 
         <EditText
             android:id="@+id/OTP_entry"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:ems="10"
+            android:fontFamily="@font/avenir_book"
             android:gravity="center"
-            android:textSize="24sp"
+            android:inputType="number"
             android:text="75899"
             android:textColor="#FFFFFF"
-            android:fontFamily="@font/avenir_book"
-            tools:ignore="HardcodedText,MissingConstraints"
-            android:ems="10"
+            android:textSize="20sp"
             app:backgroundTint="@color/textGrey"
-            android:inputType="number" />
+            tools:ignore="HardcodedText,MissingConstraints" />
 
         <TextView
+            android:id="@+id/Resend_OTP"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/Resend_OTP"
-            android:text="Resend OTP"
-            android:textSize="20sp"
-            android:textColor="#b5abab"
+            android:layout_marginTop="50dp"
             android:fontFamily="@font/avenir_book"
             android:gravity="center"
-            android:layout_marginTop="50dp" />
+            android:text="Resend OTP"
+            android:textColor="#b5abab"
+            android:textSize="18sp" />
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/get_in"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/get_in"
-            android:text="Get in !"
-            android:textSize="24sp"
-            android:textColor="@color/white"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/button_border"
             android:fontFamily="@font/avenir_book"
             android:gravity="center"
+            android:text="Get in !"
             android:textAllCaps="false"
-            android:layout_marginTop="50dp"
-            tools:ignore="MissingConstraints"
+            android:textColor="@color/white"
+            android:textSize="24sp"
             app:cornerRadius="20dp"
-            android:background="@drawable/button_border" />
+            tools:ignore="MissingConstraints" />
 
 
     </LinearLayout>
