--- a/app/src/main/res/navigation/nav_home.xml
+++ b/app/src/main/res/navigation/nav_home.xml
@@ -26,7 +26,11 @@
     <fragment
         android:id="@+id/confirmPasswordFragment"
         android:name="com.robosoft.foursquare.fragment.ConfirmPasswordFragment"
-        android:label="ConfirmPasswordFragment" />
+        android:label="ConfirmPasswordFragment" >
+        <action
+            android:id="@+id/action_confirmPasswordFragment_to_signInFragment"
+            app:destination="@id/signInFragment" />
+    </fragment>
     <fragment
         android:id="@+id/signupFragment"
         android:name="com.robosoft.foursquare.fragment.SignupFragment"
