--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -1,180 +1,160 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/background"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
-<LinearLayout
-    android:id="@+id/linear_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginTop="20dp"
-    android:layout_marginEnd="20dp"
-    android:layout_marginStart="20dp"
-    android:layout_marginBottom="20dp"
-    android:orientation="vertical"
-    tools:ignore="MissingConstraints">
-
-
-<!--    <com.google.android.material.textfield.TextInputLayout-->
-<!--        android:id="@+id/textField"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:hint="@string/Email">-->
-
-<!--        <com.google.android.material.textfield.TextInputEditText-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:gravity="center"-->
-<!--            />-->
-
-<!--    </com.google.android.material.textfield.TextInputLayout>-->
-
-
-
-    <TextView
+    <LinearLayout
+        android:id="@+id/linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/Email"
-        android:text="Email"
-        android:textSize="20sp"
-        android:textColor="#b5abab"
-        android:fontFamily="@font/avenir_book"
-        android:gravity="center"
-        android:layout_marginTop="80dp" />
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
 
-    <EditText
-        android:id="@+id/person_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:gravity="center"
-        android:text="@string/ryan_wilson"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        android:fontFamily="@font/avenir_book"
-        tools:ignore="MissingConstraints"
-        android:inputType="textEmailAddress"
-        android:ems="10"
-        app:backgroundTint="@color/textGrey"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/Password"
-        android:text="@string/password"
-        android:textSize="20sp"
-        android:textColor="#b5abab"
-        android:fontFamily="@font/avenir_book"
-        android:gravity="center"
-        android:layout_marginTop="10dp" />
-
-    <EditText
-        android:id="@+id/password_entry"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="24sp"
-        android:text="@string/_123456"
-        android:textColor="#FFFFFF"
-        android:fontFamily="@font/avenir_book"
-        tools:ignore="HardcodedText,MissingConstraints"
-        android:ems="10"
-        app:backgroundTint="@color/textGrey"
-        android:inputType="textPassword" />
+        <TextView
+            android:id="@+id/Email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="80dp"
+            android:fontFamily="@font/avenir_book"
+            android:gravity="center"
+            android:text="Email"
+            android:textColor="#b5abab"
+            android:textSize="18sp" />
 
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:id="@+id/forgotPassword"
-        android:gravity="center"
-        android:text="@string/forgot_password"
-        android:textColor="@color/textGrey"
-        android:textSize="20sp"
-        android:fontFamily="@font/avenir_book"
-        android:layout_marginTop="20dp"
-        tools:ignore="MissingConstraints"/>
+        <EditText
+            android:id="@+id/person_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:fontFamily="@font/avenir_book"
+            android:gravity="center"
+            android:inputType="textEmailAddress"
+            android:text="@string/ryan_wilson"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp"
+            app:backgroundTint="@color/textGrey"
+            tools:ignore="MissingConstraints" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/login"
-        android:text="@string/login"
-        android:textSize="24sp"
-        android:textColor="@color/white"
-        android:fontFamily="@font/avenir_book"
-        android:gravity="center"
-        android:textAllCaps="false"
-        android:layout_marginTop="18dp"
-        tools:ignore="MissingConstraints"
-        app:cornerRadius="20dp"
-        android:background="@drawable/button_border"/>
+        <TextView
+            android:id="@+id/Password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/avenir_book"
+            android:gravity="center"
+            android:text="@string/password"
+            android:textColor="#b5abab"
+            android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/password_entry"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:fontFamily="@font/avenir_book"
+            android:gravity="center"
+            android:inputType="textPassword"
+            android:text="@string/_123456"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp"
+            app:backgroundTint="@color/textGrey"
+            tools:ignore="HardcodedText,MissingConstraints" />
 
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/create_account"
-        android:text="@string/create_account"
-        android:textSize="24sp"
-        android:textColor="@color/white"
-        android:gravity="center"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/avenir_book"
-        tools:ignore="MissingConstraints"/>
+        <TextView
+            android:id="@+id/forgotPassword"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/avenir_book"
+            android:gravity="center"
+            android:text="@string/forgot_password"
+            android:textColor="@color/textGrey"
+            android:textSize="18sp"
+            tools:ignore="MissingConstraints" />
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            android:background="@drawable/button_border"
+            android:fontFamily="@font/avenir_book"
+            android:gravity="center"
+            android:text="@string/login"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:cornerRadius="20dp"
+            tools:ignore="MissingConstraints" />
+
+
+        <TextView
+            android:id="@+id/create_account"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/avenir_book"
+            android:gravity="center"
+            android:text="@string/create_account"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            tools:ignore="MissingConstraints" />
 
 
         <TextView
             android:id="@+id/OR"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/circular_img"
+            android:gravity="center"
+            android:padding="5dp"
             android:text="@string/or"
             android:textColor="@color/white"
-            android:textSize="20sp"
-            android:background="@drawable/circular_img"
-            android:layout_marginTop="15dp"/>
-
-
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal"
-        android:layout_marginTop="15dp">
-
-        <ImageButton
-            android:layout_width="170dp"
-            android:layout_height="60dp"
-            android:id="@+id/img_facebook"
-            android:src="@drawable/facebook_btn"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="0dp"
-            android:layout_marginBottom="0dp"
-            android:contentDescription="@string/facebook_img"
-            tools:ignore="HardcodedText" />
-
-        <ImageButton
-            android:layout_width="170dp"
-            android:layout_height="60dp"
-            android:id="@+id/img_google"
-            android:src="@drawable/google_btn"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="0dp"
-            android:layout_marginTop="0dp"
-            android:layout_marginBottom="0dp"
-            android:contentDescription="@string/google_img" />
-
+            android:textSize="18sp" />
 
     </LinearLayout>
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/imgGuideline"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5"/>
 
-</LinearLayout>
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/img_facebook"
+        android:src="@drawable/facebook_btn"
+        android:contentDescription="@string/facebook_img"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imgGuideline"
+        app:layout_constraintTop_toBottomOf="@id/linear_layout"/>
+
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/img_google"
+        android:src="@drawable/google_btn"
+        android:contentDescription="@string/google_img"
+        app:layout_constraintStart_toEndOf="@+id/imgGuideline"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/linear_layout"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
