--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="buttonColor">#351347</color>
     <color name="reviewText"> #8d8d8d</color>
     <color name="transparent">#80000000</color>
+    <color name="textBlack">#000000</color>
 </resources>
