--- a/app/src/main/res/layout/fragment_search_default.xml
+++ b/app/src/main/res/layout/fragment_search_default.xml
@@ -1,17 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
+
+    <!--    <LinearLayout-->
+    <!--        android:id="@+id/ll1"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        app:layout_constraintTop_toTopOf="parent"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        android:orientation="horizontal">-->
+
+    <!--        <ImageView-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:padding="20dp"-->
+    <!--            android:src="@drawable/location_icon"/>-->
+
+    <!--        <TextView-->
+    <!--            android:layout_width="0dp"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_weight="1"-->
+    <!--            android:gravity="start"-->
+    <!--            android:layout_marginStart="20dp"-->
+    <!--            android:fontFamily="@font/avenir_book"-->
+    <!--            android:textSize="20sp"-->
+    <!--            android:text="Use my current location"-->
+    <!--            android:layout_gravity="center" />-->
+
+    <!--    </LinearLayout>-->
 
     <TextView
-        android:id="@+id/tvDefault"
-        android:layout_width="wrap_content"
+        android:id="@+id/useLocation"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Default screen"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:padding="20dp"
+        android:fontFamily="@font/avenir_book"
+        android:gravity="start"
+        android:text="Use my current location"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:drawablePadding="30dp"
+        app:drawableLeftCompat="@drawable/location_icon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/useMap"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:padding="20dp"
+        android:background="@drawable/border_set"
+        android:fontFamily="@font/avenir_book"
+        android:gravity="start"
+        android:textColor="@color/black"
+        android:text="Select Search area on Map"
+        android:textSize="20sp"
+        android:drawablePadding="30dp"
+        app:drawableLeftCompat="@drawable/map_icon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/useLocation"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
