--- a/app/src/main/res/layout/place_item_adapter.xml
+++ b/app/src/main/res/layout/place_item_adapter.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="wrap_content"
     android:layout_marginVertical="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -30,10 +30,10 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="@id/imgGuideline"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="1"
             android:src="@drawable/splashscreen" />
 
         <TextView
@@ -46,7 +46,7 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:fontFamily="@font/avenir_medium"
             app:layout_constraintEnd_toEndOf="@id/imgGuideline2"
             app:layout_constraintStart_toEndOf="@id/imgGuideline"
@@ -82,12 +82,12 @@
             android:id="@+id/ratings"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="4.5"
+            android:text="1.0"
+            android:textSize="12sp"
             android:background="@drawable/bg_rating"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginBottom="3dp"
             android:textColor="@color/white"
-            app:layout_constraintTop_toBottomOf="@id/placeName"
             app:layout_constraintStart_toEndOf="@id/imgGuideline"
             app:layout_constraintBottom_toTopOf="@id/distanceAndValue"
             android:padding="3dp"/>
@@ -97,14 +97,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Movie Theatre 4.5km"
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:ellipsize="end"
             android:maxLines="1"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/avenir_medium"
             app:layout_constraintEnd_toEndOf="@id/imgGuideline2"
-            app:layout_constraintTop_toBottomOf="@id/ratings"
             app:layout_constraintStart_toEndOf="@id/imgGuideline"
             app:layout_constraintBottom_toTopOf="@id/placeAddress"/>
 
@@ -115,11 +114,10 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:text="Tiger circle, Manipala"
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:layout_marginStart="10dp"
             android:fontFamily="@font/avenir_medium"
-            android:layout_marginBottom="10dp"
-            app:layout_constraintTop_toBottomOf="@id/distanceAndValue"
+            android:layout_marginBottom="2dp"
             app:layout_constraintEnd_toEndOf="@id/imgGuideline2"
             app:layout_constraintStart_toEndOf="@id/imgGuideline"
             app:layout_constraintBottom_toBottomOf="parent"/>
