--- a/app/src/main/res/menu/place_details_bar.xml
+++ b/app/src/main/res/menu/place_details_bar.xml
@@ -11,7 +11,7 @@
 
     <item
         android:id="@+id/favorite"
-        android:icon="@drawable/favourite_icon_new"
+        android:icon="@drawable/favourite"
         android:title="@string/search"
         android:contentDescription="@string/search"
         app:showAsAction="ifRoom" />
