--- a/app/src/main/res/drawable/image_shadow.xml
+++ b/app/src/main/res/drawable/image_shadow.xml
@@ -5,9 +5,19 @@
             <gradient
                 android:angle="270"
                 android:centerColor="#00FF0000"
-                android:centerY="0.3"
+                android:centerY="0.4"
                 android:endColor="#00FF0000"
                 android:startColor="@color/primary" />
+        </shape>
+    </item>
+    <item>
+        <shape android:shape="rectangle">
+            <gradient
+                android:angle="270"
+                android:centerColor="#00FF0000"
+                android:centerY="0.7"
+                android:endColor="@color/black"
+                android:startColor="#00FF0000" />
         </shape>
     </item>
 </layer-list>
