--- a/app/src/main/res/layout/activity_place_details.xml
+++ b/app/src/main/res/layout/activity_place_details.xml
@@ -25,8 +25,8 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="250dp"
-            android:background="@drawable/top_shadow"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@drawable/image_shadow"
+            app:layout_constraintEnd_toEndOf="@id/placeImg"
             app:layout_constraintStart_toStartOf="@id/placeImg"
             app:layout_constraintBottom_toBottomOf="@id/placeImg"
             app:layout_constraintTop_toTopOf="@id/placeImg" />
