--- a/app/src/main/res/layout/activity_place_details.xml
+++ b/app/src/main/res/layout/activity_place_details.xml
@@ -65,6 +65,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:gravity="center"
+            android:textSize="18sp"
             android:layout_marginBottom="10dp"
             app:layout_constraintBottom_toTopOf="@id/ratingBar"
             app:layout_constraintStart_toStartOf="@id/placeImg"
@@ -74,12 +75,11 @@
         <RatingBar
             android:id="@+id/ratingBar"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="?android:attr/ratingBarStyleSmall"
-            android:layout_marginVertical="10dp"
+            android:layout_height="30dp"
+            android:layout_marginVertical="7dp"
             android:numStars="5"
-            android:theme="@style/RatingBar"
-            android:rating="1.5"
+            style="@style/customRatingBar"
+            android:rating="2.5"
             app:layout_constraintBottom_toBottomOf="@id/placeImg"
             app:layout_constraintStart_toStartOf="@id/placeImg"
             android:stepSize="0.1"
